mavensmate/Fabrication/deploy/kalho13@gmail.com/2014-05-14 14:45:45/unpackaged/objects/Job_Fabrication_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Calculated_Fit_Minutes_Per_Part__c</fullName>
        <formula>If(ISPICKVAL(Type_Work__c, &apos;F&apos;),Work_Entry_Minutes__c / Work_Entry_Quantity__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Fit Minutes Per Part</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Fit_Pounds_Per_Hour__c</fullName>
        <formula>If(ISPICKVAL(Type_Work__c, &apos;F&apos;), (Work_Entry_Quantity__c * Inherited_Unit_Weight__c)/ (Work_Entry_Minutes__c /60), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Fit Pounds Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Minutes_Per_Part__c</fullName>
        <formula>IF(ISPICKVAL(Type_Work__c, &apos;W&apos;), Work_Entry_Minutes__c / Work_Entry_Quantity__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Minutes Per Part</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Pounds_Per_Hour__c</fullName>
        <formula>IF(ISPICKVAL(Type_Work__c, &apos;W&apos;),(Work_Entry_Quantity__c * Inherited_Unit_Weight__c)/  (Work_Entry_Minutes__c /60), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Pounds Per Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_Weight__c</fullName>
        <formula>Work_Entry_Quantity__c  * Inherited_Unit_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated_Weight</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inherited_Unit_Weight__c</fullName>
        <formula>Job_Part__r.Weight_Single_Part__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inherited Unit Weight</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <formula>Job_Part__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Part__c</fullName>
        <label>Job Part</label>
        <referenceTo>Job_Part__c</referenceTo>
        <relationshipName>Job_Part_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type_Work__c</fullName>
        <description>Distinguished between fit and weld to avoid double counting hours and pounds</description>
        <inlineHelpText>Distinguished between fit and weld to avoid double counting hours and pounds</inlineHelpText>
        <label>Type Work</label>
        <picklist>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Entry_Date__c</fullName>
        <label>Work Entry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Entry_Employee__c</fullName>
        <label>Work Entry Employee</label>
        <picklist>
            <picklistValues>
                <fullName>Jake Shelton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Belka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve McLeod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Entry_Minutes__c</fullName>
        <label>Work Entry Minutes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Entry_Quantity__c</fullName>
        <label>Work Entry Quantity</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Job Fabrication Detail</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Job Fabrication Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Fabrication Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>